LibraryServiceMSA/.k8s/bookservice.yml
apiVersion: v1
kind: Service
metadata:
  name: bookservice
  labels:
    run: bookservice
spec:
  type: LoadBalancer
  ports:
  - name: "80"
    port: 80
    protocol: TCP
    targetPort: 80
  - name: "443"
    port: 433
    protocol: TCP
    targetPort: 433
  selector:
    run: bookservice
