LibraryServiceMSA/.k8s/loanService.yml
apiVersion: v1
kind: Service
metadata:
  name: loanservice
  labels:
    run: loanservice
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: "443"
    port: 433
    protocol: TCP
    targetPort: 433
  selector:
    run: loanservice
