LibraryServiceMSA/.k8s/orderservice.yml
apiVersion: v1
kind: Service
metadata:
  name: orderservice
  labels:
    run: orderservice
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: "443"
    port: 433
    protocol: TCP
    targetPort: 433
  selector:
    run: orderservice
